--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title:       Pixyll
 email:       your_email@example.com
 author:      ""
 description: "A simple, beautiful theme for Jekyll that emphasizes content rather than aesthetic fluff."
-baseurl:     ""
+baseurl:     "/pixyll"
 url:         "http://pixyll.com"
 date_format: "%b %-d, %Y"
 header_pages:
